syntax = "proto3";

package  pb;

option go_package = "./proto;pb";

service UserService {
  //测试
  rpc TestUser(TestRequest) returns (TestResponse){}
  //用户注册
  rpc UserRegister(RegisterRequest) returns (RegisterResponse){}
}

message TestRequest{
  int32 id = 1;
}

message TestResponse{
  string msg = 1;
}

message RegisterRequest{
  string username = 1;
  string password = 2;
  string re_password = 3;
  string phone = 4;
  string email = 5;
}

message RegisterResponse{
  int32 code = 1;
  string info = 2;
}